feat: Add persistence module tests